# iip

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  test_llm.py  webhook-test.txt
FDX_SDK_PRO_FD_Android_Studio_4_22/: readme.txt
backend/libs/iip-audit/: pyproject.toml
backend/libs/iip-audit/iip_audit/: __init__.py  ledger.py
backend/libs/iip-audit/tests/: test_ledger.py
backend/libs/iip-core/: pyproject.toml
backend/libs/iip-core/iip_core/: __init__.py  auth.py  db.py  errors.py  keycloak.py  logging.py  object_storage.py  settings.py
backend/libs/iip-llm/: pyproject.toml
backend/libs/iip-llm/iip_llm/: __init__.py  client.py
backend/libs/iip-llm/tests/: test_client.py
backend/services/iam-svc/: .env.example  Dockerfile  pyproject.toml
backend/services/iam-svc/alembic/: env.py
backend/services/iam-svc/alembic/versions/: 3161ef61df11_initial_iam_schema.py
backend/services/iam-svc/iam_svc/: __init__.py  cache.py  dependencies.py  main.py
backend/services/iam-svc/iam_svc/models/: __init__.py  associations.py  grant_tables.py  jit.py  legacy_reference_base.py  menu.py  mobile_widget.py  office.py  privilege.py  privilege_action.py  rank.py  role.py  suspect_dossier.py  suspect_link_decision.py  system_setting.py  unit_type.py  user.py  user_notification.py  user_office_role.py
backend/services/iam-svc/iam_svc/repositories/: __init__.py  fingerprint_submission_repository.py  menu_repository.py  mobile_home_repository.py  mobile_map_repository.py  mobile_widget_repository.py  notification_repository.py  office_repository.py  privilege_repository.py  reference_master_repository.py  role_repository.py  suspect_dossier_repository.py  system_settings_repository.py  user_repository.py
backend/services/iam-svc/iam_svc/routers/: __init__.py  access.py  auth.py  captcha.py  fingerprint_submissions.py  health.py  jit.py  knowledge_graph.py  menus.py  mfa.py  mfa_profile.py  mobile.py  mobile_home.py  notifications.py  office_lookups.py  offices.py  privileges.py  profile.py  ranks.py  roles.py  security.py  suspect_dossiers.py  unit_types.py  users.py
backend/services/iam-svc/iam_svc/scripts/: sync_users_to_keycloak.py
backend/services/iam-svc/iam_svc/services/: auth_mfa.py  captcha_store.py  document_storage.py  fingerprint_ml_client.py  keycloak_admin.py  keycloak_sync.py  knowledge_graph_service.py  legacy_unit_import.py  mfa_pending_store.py  mfa_service.py  mobile_home_geo.py  mobile_theme.py  mobile_widget_access.py  notification_dispatch.py  notification_events.py  notification_hub.py  office_nested_set.py  permission_service.py  profile_photo.py  suspect_address_utils.py  suspect_master_profile.py  suspect_match_scoring.py
backend/services/iam-svc/tests/: test_auth.py
backend/services/ml-gateway-svc/: Dockerfile  pyproject.toml
backend/services/ml-gateway-svc/data/openafis/templates/: 02e43ca4-89df-433c-a08f-c33ae74bae11.iso  147b0863-5b1a-4bdb-888a-ada27020a452.iso  5787d23f-8050-4515-8bd2-b531da1ef4aa.iso  6b684d28-8f0b-47c1-9fad-4a95ea05f47b.iso  ef84d3af-f776-41e9-bb3c-8423de1c1616.iso  f82a64a0-b09b-4fe7-8fdd-566d916c97f3.iso
backend/services/ml-gateway-svc/ml_gateway_svc/: __init__.py  main.py  settings.py
backend/services/ml-gateway-svc/ml_gateway_svc/routers/: __init__.py  chat.py  faces.py  fingerprints.py  health.py  rag.py
backend/services/ml-gateway-svc/ml_gateway_svc/services/: __init__.py  face_index.py  face_pipeline.py  face_similarity.py  fingerprint_afis_store.py  fingerprint_bootstrap.py  fingerprint_index.py  fingerprint_pipeline.py  fingerprint_quality.py  fingerprint_store.py  nbis_matcher.py  suspect_photo_storage.py
scratch/: analyze_last_query.py  check_all_db.py  check_db_fingerprints.py  check_dossiers_db.py  check_es.py  check_sreejith.py  check_submissions.py  clear_all_fingerprints.py  delete_sreejith_fingerprint.py  inspect_templates.py  parse_fmr.py  parse_submissions.py  query_es_fingerprints.py  reindex_fingerprints.py  simulate_identify.py  test_fast_matcher.py  test_histogram_embedding.py  test_identify_api.py  test_index_on_approve.py  test_indexing.py  test_keycloak_settings.py  test_minutiae_matcher.py  (+3 more)
(+406 files in other folders)
