[project]
name = "iip-core"
version = "0.1.0"
description = "IIP Core Shared Library — logging, db, auth, telemetry, error models"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "structlog>=24.2.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-exporter-otlp>=1.24.0",
  "prometheus-client>=0.20.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "httpx>=0.27.0",
  "redis[hiredis]>=5.0.4",
  "aiokafka>=0.11.0",
]
