[project]
name = "iam-svc"
version = "0.1.0"
description = "IIP IAM Service — Identity, Access Management, Roles, Privileges, JIT Elevation"
requires-python = ">=3.12"
dependencies = [
  "iip-core",
  "iip-audit",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic[email]>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.30",
  "greenlet>=3.0.0",
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "structlog>=24.2.0",
  "redis[hiredis]>=5.0.4",
  "prometheus-client>=0.20.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "captcha>=0.7.1",
  "python-multipart>=0.0.9",
  "pyotp>=2.9.0",
  "qrcode>=7.4.2",
  "cryptography>=42.0.0",
]

[tool.uv.sources]
iip-core  = { workspace = true }
iip-audit = { workspace = true }
