[project]
name = "ml-gateway-svc"
version = "0.1.0"
description = "IIP ML Gateway Service — Llama 3.1 RAG orchestration, prompt routing, streaming"
requires-python = ">=3.12"
dependencies = [
  "iip-core",
  "iip-audit",
  "iip-llm",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "sse-starlette>=2.1.0",
  "elasticsearch[async]>=8.13.0",
  "neo4j>=5.20.0",
  "structlog>=24.2.0",
  "prometheus-client>=0.20.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
]

[tool.uv.sources]
iip-core  = { workspace = true }
iip-audit = { workspace = true }
iip-llm   = { workspace = true }
